# portent

./: .gitignore  .gitmodules  README.md  notes.md
ai-nlp/: label.py  llm.py  model.py  news_data.py  nyt.ipynb  pyproject.toml  tags.py
backend/: lambda_function.py
